# faceDetection

./: CMakeLists.txt  README.md
Plugins/cuda/: Makefile
Plugins/cuda/src/: allClassNMS.cu  bboxUtils.cu  common.cu  decodeBBoxes.cu  decodeBBoxesPP.cu  detectionInference.cu  detectionInferencePP.cu  gatherTopDetections.cu  gatherTopDetectionsPP.cu  gridAnchorInference.cu  nmsPlugin.cu  permuteData.cu  reducedMath.cu  sortScoresPerClass.cu  sortScoresPerImage.cu
Plugins/include/: bboxUtils.h  gridAnchorPlugin.h  kernel.h  nmsPlugin.h  plugin.h  reducedMath.h
include/: TRuntime.h  builder.h  cuda_includes.h  gpuprocess.h  gridAnchorPlugin.h  netbuilder.h  nmsPlugin.h
src/: TRuntime.cpp  blob.cpp  builderDistinguish.cpp  builderFace.cpp  gpuprocess.cpp  gridAnchorPlugin.cpp  main.cpp  netbuilder.cpp  networkSelection.cpp  nmsPlugin.cpp
